<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    tools:context=".ui.AddActivity"
    >

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_stroke"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="start"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="14dp"
        android:paddingTop="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edt_about"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_stroke"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/white"
        android:gravity="start"
        android:hint="@string/write_your_about"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textColorHint="@color/white_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_title" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/bg_stroke"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:gravity="start"
        android:hint="@string/write_your_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_about"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_secondary"
        android:backgroundTint="@color/blue_secondary"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="34dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>